<resources>
    <string name="app_name">InfoMedicalStaff</string>
    <string name="greeting">Добро\nпожаловать</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="registration">Нет аккаунта? Зарегистрироваться</string>
    <string name="google">Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createAccount">Создание\nаккаунта</string>
    <string name="name">Имя</string>
    <string name="hello">Добрый день,</string>
    <string name="news">Новости</string>
    <string name="chats">Чаты</string>
    <string name="favorites">Избранное</string>
    <string name="search">Поиск...</string>
    <string name="inf_banner">Оперативная информация</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="password_two">Повторите пароль</string>
    <string name="workers_chats">Рабочие чаты</string>
    <string name="tools_desc_chat">Добрый день, уважаймые коллеги!!!</string>
    <string name="three_dots">...</string>
    <string name="hint_message">Введите ваше сообщение</string>
    <string name="profile">Профиль</string>
    <string name="user_name">Имя пользователя</string>
    <string name="user_surname">Введите фамилию</string>
    <string name="contacts">Контакты</string>
    <string name="name_user">Имя пользователя</string>
    <string name="post">Должность</string>
    <string name="new_group">Новая группа</string>
    <string name="users">Участники</string>
    <string name="open">Открыть</string>
    <string name="add_fav">В избранное</string>
    <string name="sanitary_rules">Санитарные правила</string>
    <string name="favorite">Избранное</string>
    <string name="text_fav">В вашем списке нет еще избранных документов!</string>
    <string name="news_feed">Новости</string>
</resources>