<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/top_background1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background1" />

    <TextView
        android:id="@+id/welcome"
        style="@style/TextScreenLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/greeting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_background1" />

    <EditText
        android:id="@+id/et_reg_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/email"
        android:drawablePadding="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/accent_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/et_signup_password_two"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/password"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:layout_marginTop="24dp"
        android:inputType="textPassword"
        android:textColorHint="@color/accent_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_email"
        tools:ignore="TextFields" />

    <ImageView
        android:id="@+id/btn_singnup"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_password_two"
        app:srcCompat="@drawable/btn_arraw1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_google_login"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/google"
        style="@style/ButtonAuthorization"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="@+id/et_signup_password_two"
        app:layout_constraintStart_toStartOf="@+id/et_signup_password_two"
        app:layout_constraintTop_toBottomOf="@+id/btn_singnup" />

    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:layout_marginTop="16dp"
        style="@style/TextScreenAuthorizationMin"
        app:layout_constraintEnd_toEndOf="@+id/btn_google_login"
        app:layout_constraintStart_toStartOf="@+id/btn_google_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_google_login" />
</androidx.constraintlayout.widget.ConstraintLayout>