<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@drawable/white_background"
    android:elevation="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/top_banner_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_news"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/envelope" />

        <TextView
            android:id="@+id/tv_news"
            style="@style/TextMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/news"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/top_banner_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/heart" />

        <TextView
            android:id="@+id/tv_favorite"
            style="@style/TextMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/favorites"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/top_banner_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_chats"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/chat" />

        <TextView
            android:id="@+id/tv_chats"
            style="@style/TextMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/chats"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>